# myqick

./: pyproject.toml
lib/myqick/: asm_v1.py  asm_v2.py  averager_program.py  helpers.py  ip.py  pyro_cli.py  qick.py  qick_asm.py  rfboard.py  streamer.py  tprocv2_assembler.py
lib/myqick/drivers/: generator.py  peripherals.py  readout.py  tproc.py
